--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,8 +1,17 @@
-html{
-font-size: 62.5%;
+html {
+    font-size: 62.5%;
 }
-body{
-    font-family:Helvetica,Arial, sans-serif;
+
+body {
+    font-family: Helvetica, Arial, sans-serif;
     font-size: 1.6rem;
     background: $dark-blue;
+}
+
+button {
+    cursor: pointer;
+}
+
+button:disabled {
+    cursor: default;
 }
