--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -6,7 +6,7 @@
     font-weight: bold;
     font-size: $l-size;
     width: 100%;
-    margin-bottom: $xl-size;
+    margin-bottom: $m-size;
     padding: 2.4rem;
 }
 
@@ -22,9 +22,16 @@
     font-weight: 500;
     padding: $s-size;
 }
+
 .button--link {
-background: none;
-border:none;
-color: $off-white;
-padding: 0;
+    background: none;
+    border: none;
+    color: $off-white;
+    padding: 0;
+}
+
+@media (min-width: $desktop-breakpoint) {
+    .big-button {
+        margin-bottom: $xl-size;
+    }
 }
