--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,4 +3,7 @@
 @import './components/container';
 @import './components/button';
 @import './components/widget';
+@import './components/option';
+@import './components/addoption';
+@import './components/modal'; 
 @import './components/header';
